# img2tempdecal

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: gif2tempdecal.rs  png2tempdecal.rs
src/: extend.rs  fit.rs  lib.rs  remap.rs
wad3/: Cargo.toml  LICENSE  README.md
wad3/src/: lib.rs  texture.rs
wad3/src/texture/: mipmap.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: .gitignore  Cargo.toml  README.md  common.css  deno.json  index.css  index.html  main.ts  package.json  pnpm-lock.yaml  privacy-policy.css  privacy-policy.html  style.css  svelte.config.js  terms-of-use.html  theme-switch.ts  tsconfig.json  vite.config.mjs  vite.config.mts  vite.config.ts  worker.ts  wrangler.jsonc
web/js/: converter.ts  style.css  style.ts
web/notice/: index.html
web/pkg/: common.css  index.html  main.ts  style.css  theme-switch.ts  worker.ts
web/pkg/privacy-policy/: index.html
web/pkg/terms-of-use/: index.html
web/privacy-policy/: index.html
web/rs_lib/: Cargo.toml
web/rs_lib/src/: lib.rs
web/scripts/: concat_licenses.js
web/src/: app.d.ts  app.html  lib.rs  main.ts  style.ts  sw.ts  worker.ts
web/src-js/: converter.ts  index.css  index.ts  sp-imports.ts
web/src/lib/: Focusable.svelte  Link.svelte  LinkStyleButton.svelte  PageTitle.svelte  Panel.svelte
web/src/routes/: +layout.svelte  +page.svelte  Converter.svelte  FileDragAndDropArea.svelte  StatusMessage.svelte  Switch.svelte  worker.ts
web/src/routes/privacy-policy/: +page.svelte
web/src/routes/third-party-licenses/: +page.svelte
web/static/: licenses
web/terms-of-use/: index.html
