[package]
name = "img2tempdecal"
version = "0.1.0"
authors = ["Nozomi Miyamori"]
edition = "2021"

[dependencies]
wad3 = { git = "https://github.com/nm004/wad3-rs" }
imagequant = { version = "4.0.1", default-features = false }
rgb = "0.8.33"
resize = "0.7.3"

[dev-dependencies]
png = "0.17.5"

[workspace]
members = ["web"]
