[package]
name = "img2tempdecal"
version = "1.1.1"
authors = ["Nozomi Miyamori"]
edition = "2021"

[dependencies]
imagequant = { version = "4.0.1", default-features = false }
rgb = "0.8.33"
resize = "0.7.3"

[dev-dependencies]
png = "0.17.5"
clap = { version = "3.2.12", features = ["derive"] }

[workspace]
members = ["web"]
