[package]
name = "img2tempdecal-web"
version = "1.0.0"
authors = ["Nozomi Miyamori"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
img2tempdecal = { path = ".." }
wasm-bindgen = "0.2.82"
js-sys = "0.3.59"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
