[package]
name = "img2tempdecal-web"
version = "4.0.0"
authors = ["Nozomi Miyamori"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
img2tempdecal = { path = "../.." }
wasm-bindgen = "0.2.92"
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
opt-level = "z"
lto = true
strip = "symbols"
panic = "abort"
