[package]
name = "img2tempdecal-web"
version = "4.0.2"
authors = ["Nozomi Miyamori"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
img2tempdecal = { path = "../.." }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.93"

[profile.release]
opt-level = "z"
lto = true
strip = "symbols"
panic = "abort"
