[package]
name = "img2tempdecal-web"
authors = ["Nozomi Miyamori"]
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
img2tempdecal = { path = "../.." }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.120"

[profile.release]
opt-level = "z"
lto = true
strip = "symbols"
panic = "abort"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "-all", "--optimize-for-js"]